# msAgent

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  README.md  config.json  hatch_build.py  langgraph.json  pyproject.toml  reafact.md  run.py  version.info
.github/workflows/: build-wheel.yml  publish-release.yml
docs/: AGENT_RETRY_CONFIG.md  AGENT_RETRY_IMPLEMENTATION.md  CONTEXT_COMPACTION_GUIDE.md  RETRY_MIDDLEWARE_GUIDE.md  build-and-package.md  conf.py  configuration-and-extension.md  document-ux-review.md  document_ux_review.md  faq.md  index.md  tag-release.md  version-and-compatibility.md
docs/agents/: Accuracy.md  Hermes.md  Icarus.md  Minos.md  Zephyr.md
docs/design/: arch_overview.md
docs/example/: index.html
pre-commit/: pyproject.toml  typos.toml
scripts/: build_whl.sh  install.sh  sync_version.py
skills/: README.md
skills/ascend-cluster-fast-slow-rank-detector/: SKILL.md
skills/ascend-communication-analysis/: SKILL.md
skills/ascend-computation-analysis/: SKILL.md
skills/ascend-msprof-analyze-cli/: SKILL.md
skills/ascend-npu-snapshot-analyzer/: SKILL.md
skills/ascend-profiler-data-validation/: SKILL.md
skills/ascend-profiler-db-explorer/: SKILL.md
skills/ascend-schedule-analysis/: SKILL.md
skills/ascendc-operator-performance-optim/: SKILL.md
skills/cluster-fast-slow-rank-detector/: SKILL.md
skills/deterministic-calculation-analysis/: SKILL.md
skills/document-ux-review/: SKILL.md
skills/gen-evaluation-cfg/: SKILL.md
skills/gitcode-code-reviewer/: SKILL.md
skills/mindstudio-cpu-binding/: README.md  SKILL.md
skills/msagent-project-assistant/: SKILL.md
skills/msmodeling-device-config/: SKILL.md
skills/msmodeling-env-installer/: SKILL.md
skills/msmodeling-text-generate-executor/: SKILL.md
skills/msmodeling-throughput-optimizer-executor/: SKILL.md
skills/msprof-analyze-cli/: SKILL.md
tests/: test_add_skill_handler.py  test_agent.py  test_agent_factory_runtime.py  test_agents_handler.py  test_application.py  test_approval_middleware.py  test_bash_handler.py  test_bash_utils.py  test_benchmark_runner.py  test_bottom_toolbar.py  test_catalog_interfaces.py  test_checkpointer_factory.py  test_cli.py  test_cli_bootstrap.py  test_cli_trace.py  test_commands.py  test_completer_router.py  test_compression_handler.py  test_compression_utils.py  test_config.py  test_config_registry.py  test_config_versions.py  test_context.py  test_deepagents_compat.py  test_file_resolver.py  test_file_utils.py  test_hatch_build.py  test_image_resolver.py  test_initializer_runtime_context.py  test_interrupt_handler.py  test_langchain_openai_compat.py  test_legacy_defaults.py  test_llm.py  test_llm_factory.py  test_llm_factory_integration.py  test_local_context.py  test_logging.py  test_matching_utils.py  test_mcp_client.py  test_mcp_factory_and_memory.py  (+39 more)
tests/benchmark/: CASE_GUIDE.md  DEMO.md  QUICKSTART.md  README.md  pyproject.toml
tests/benchmark/benchmarks/: agent_default.yaml  agent_list.yaml  agent_pick.yaml  cluster_fast_slow_rank_profiling_skill.yaml  cluster_fast_slow_rank_skill.yaml  mock_agent_smoke.yaml  real_case1.yaml
tests/benchmark/data/mock_agent_smoke/: events.jsonl  facts.md
tests/benchmark/data/msagent_agents/: agents.md
tests/benchmark/src/: __init__.py  judge.py  metrics.py  mock_agent.py  msagent_cli.py  run_benchmark.py  schema.py  trace.py
(+318 files in other folders)
